border box sizing, center pokeball placeholder image, prevent list items from bleeding out of list

--- a/src/app/components/pokemon/components/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokemon/components/pokemon-list/pokemon-list.component.scss
@@ -20,9 +20,10 @@
 
   button {
     all: unset;
-    width: inherit;
+    box-sizing: border-box;
+    width: 100%;
     cursor: pointer;
-    padding: 1rem 0;
+    padding: 1rem;
     border-top: 1px solid hsl(0, 0%, 83%);
     background-color: inherit;
   }
