--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,7 @@ body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
 }
+
+* {
+  box-sizing: border-box;
+}
